Added configuration that grants the dbm-gorm-diff command more heap space due PermGen error.